loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: project1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
